--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 90vh;
   background-color: #fff;
-  position: relative;
 }
 .home-section {
   display: flex;
@@ -45,28 +44,32 @@
   margin: 3rem 10rem;
 }
 .buttons {
-  width: 80%;
-  background-color: rgb(229, 207, 207);
+  width: 50%;
+  background-color: #fff;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
   height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: absolute;
-  right: 8rem;
-  bottom: 3rem;
   border-bottom-right-radius: 30px;
   border-top-left-radius: 30px;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: -0;
+  margin: auto;
+  margin-top: -3.5rem;
 }
 .buttons button {
   border: none;
   outline: none;
   width: calc(100% / 5 - 5px);
 }
-.buttons button.active {
+.active {
   background-color: blue;
   color: #fff;
   height: 100%;
-  border-bottom-right-radius: 30px;
+  
 }
 .flexx {
   display: flex;
