--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,7 +2,9 @@
   width: 100%;
   padding: 0 5rem;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.03);
+  background-color: #fff;
   position: sticky;
+  top: 0%;
 }
 .navbar {
   display: flex;
