--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -69,10 +69,129 @@
   background-color: blue;
   color: #fff;
   height: 100%;
-  
 }
 .flexx {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+}
+.bizines {
+  width: 100%;
+  height: 100vh;
+  padding: 5rem;
+  margin-top: 2rem;
+}
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+}
+.left h1 {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+.left p {
+  font-size: 26px;
+  letter-spacing: 2;
+  font-weight: normal;
+}
+.left button {
+  padding: 15px 35px;
+  background-color: blue;
+  color: #fff;
+  border-radius: 20px;
+  order: none;
+  outline: none;
+  font-size: 20px;
+  margin-top: 3rem;
+}
+.right {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+.image-item {
+  display: grid;
+  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: 150px 150px 150px;
+  gap: 2rem;
+}
+.center {
+  width: 170px;
+  height: 150px;
+}
+.center img {
+  width: 100%;
+  border-radius: 20px;
+  margin-top: -2rem;
+  margin-right: -1rem;
+}
+
+.types {
+  padding: 3rem 5rem;
+  text-align: center;
+}
+.types h1 {
+  margin-bottom: 2rem;
+}
+
+.types-card {
+  display: grid;
+  grid-template-columns: 600px 600px;
+  grid-template-rows: 200px 200px;
+}
+.card-list {
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  margin: 1rem;
+  border-radius: 10px;
+}
+.card-title h4 {
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+.card-title p {
+  color: gray;
+}
+.shares {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 8rem;
+  margin-top: 5rem;
+}
+.share-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.share-detail h2 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.share-detail h4 {
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.share-img-link img {
+  margin: 1rem;
+}
+.web-app {
+  text-align: center;
+
+  margin-top: 1rem;
+}
+.web-app h2 {
+  font-size: 19px;
+  font-weight: bold;
 }
